--- a/src/components/pages/HomeSections/Addproduct.module.scss
+++ b/src/components/pages/HomeSections/Addproduct.module.scss
@@ -1,6 +1,31 @@
 #AddProdcut {
+  padding: 100px 0;
   .AddProduct {
     display: flex;
     flex-direction: column;
+    form {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 20px;
+      input {
+        width: 600px;
+        height: 46px;
+        border: 2px solid rgb(8, 205, 8);
+        outline: none;
+        background: transparent;
+        border-radius: 10px;
+        color: white;
+        font-size: 20px;
+        box-shadow: 10px 10px 30px white;
+      }
+      button {
+        padding: 10px 30px;
+        background: greenyellow;
+        border: none;
+        border-radius: 10px;
+        font-size: 20px;
+      }
+    }
   }
 }
